adiciona sistema de XP com exibição de nível e progresso ao completar itens

--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
 
         <!-- Seção de Dieta -->
         <div class="tab-content active" id="dietTab">
+            <div class="xp-system">
+                <div class="xp-header">
+                    <div class="level-badge">
+                        <span class="level-number" id="levelNumber">1</span>
+                        <span class="level-label">Nível</span>
+                    </div>
+                    <div class="xp-info">
+                        <div class="xp-bar-container">
+                            <div class="xp-bar-fill" id="xpBarFill"></div>
+                        </div>
+                        <span class="xp-text" id="xpText">0 / 100 XP</span>
+                    </div>
+                </div>
+                <div class="xp-achievement" id="xpAchievement"></div>
+            </div>
+
             <div class="stats">
                 <div class="stat-item">
                     <span class="stat-label">Progresso</span>
