adiciona lógica para detecção de dias da semana, exibe mensagem de "Dieta Livre" nos fins de semana e cria página de teste interativa

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header>
             <h1>Foodie</h1>
-            <p class="subtitle">Plano de 5 dias</p>
+            <p class="subtitle">Plano de alimentação</p>
         </header>
 
         <!-- Abas de navegação -->
